# grepple

./: .gitignore  Cargo.toml  README.md  SKILL.md
crates/grepple-cli/: Cargo.toml
crates/grepple-cli/src/: main.rs  tui.rs
crates/grepple-core/: Cargo.toml
crates/grepple-core/src/: app.rs  classify.rs  error.rs  installer.rs  lib.rs  log_ops.rs  mcp.rs  model.rs  runtime.rs  storage.rs
crates/grepple-mcp/: Cargo.toml
crates/grepple-mcp/src/: main.rs
