[package]
name = "grepple"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[workspace]
members = [
  "crates/grepple-core",
  "crates/grepple-cli",
  "crates/grepple-mcp",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Bojan Wilytsch"]

[workspace.dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde", "clock"] }
ulid = { version = "1.2", features = ["serde"] }
dirs = "6.0"
clap = { version = "4.5", features = ["derive"] }
regex = "1.11"
walkdir = "2.5"
tokio = { version = "1.48", features = ["rt-multi-thread", "macros", "signal", "process", "io-util", "sync", "time", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[features]
default = []
with-mcp-bin = []

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
grepple-core = { path = "crates/grepple-core" }

[[bin]]
name = "grepple"
path = "crates/grepple-cli/src/main.rs"

[[bin]]
name = "grepple-mcp"
path = "crates/grepple-mcp/src/main.rs"
required-features = ["with-mcp-bin"]
