[package]
name = "grepple-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "grepple"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
crossterm.workspace = true
ratatui.workspace = true
grepple-core = { path = "../grepple-core" }
