[package]
name = "grepple-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
ulid.workspace = true
dirs.workspace = true
regex.workspace = true
walkdir.workspace = true
libc = "0.2"
